# pet-lovers

./: Dockerfile  manage.py  pyproject.toml
app/: settings.py  urls.py
app/core/: models.py  urls.py  views.py
app/templates/login/: login.html
app/user/: models.py
tests/: test_pet_lovers.py
