[tool.poetry]
name = "pet-lovers"
version = "0.1.0"
description = ""
authors = ["DenysMenfredy <denys.menfredy7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
